SERVER-96841 checkMetadataConsistency should not check the timeseriesBucketsMayHaveMixedSchemaData top-level catalog field (#29395)

GitOrigin-RevId: 00fc8d73f5288b8237d101105fd8ce8c5177a69a